# hex_arm_controller

./: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
hex_arm_controller/: arm_controller.py
hex_arm_controller/utility/: __init__.py  joint_params.py  ros1_arm_controller.py  ros2_arm_controller.py
launch/ros1/: arm_setup.launch  can_setup.launch  joint_forward.launch
launch/ros2/: arm_setup.launch.py  can_setup.launch.py  joint_forward.launch.py
scripts/: 99-hex-can.rules  HexArm2LRDriver  HexArm2LRDriverAmd64  HexArm2LRDriverArm64
