<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hex_arm_controller</name>
  <version>0.0.0</version>
  <description>The hex_arm_controller package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
